--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
