--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-navigation-menu": "1.2.1",
+    "@radix-ui/react-popover": "1.1.2",
+    "cva": "npm:class-variance-authority@^0.7.0",
+    "install": "^0.13.0",
+    "lucide-react": "^0.451.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.22",
+    "npm": "^10.9.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@types/node": "^20",
